<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLoginL"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserEmailL"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/user_email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginL"
        tools:ignore="Autofill" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserPasswordL"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserEmailL"
        app:layout_constraintStart_toStartOf="@+id/editTextUserEmailL"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserEmailL"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserPasswordL"
        app:layout_constraintStart_toStartOf="@+id/editTextUserPasswordL"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserPasswordL" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewNewUserL"
        style="@style/TextLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/new_user"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>